Revert "add vars"
This reverts commit d48be48a4a9808956bf5ddb83479ba70c6580762.

--- a/templates/lemmy.hjson.template
+++ b/templates/lemmy.hjson.template
@@ -18,9 +18,9 @@
   database: {
     user: "lemmy"
     password: "{{POSTGRES_PASSWORD}}"
-    host: "{{ POSTGRES_HOST }}"
-    port: {{ POSTGRES_PORT }}
-    database: "{{ POSTGRES_DB_NAME }}"
+    host: "postgres"
+    port: 5432
+    database: "lemmy"
     pool_size: {{POSTGRES_POOL_SIZE}}
   }
 
